fix z-index bug on item edit form

--- a/assets/styles/categories.css
+++ b/assets/styles/categories.css
@@ -171,6 +171,7 @@
 	left: 0;
 	height: 100%;
 	width: 100%;
+    z-index: 2;
 }
 
 	.delete-confirm .ui-button {
